Day34-k8s-intro/k8s-manifest-files/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ipl-service
  namespace: murali-ns
spec:
  selector:
    app: ipl
  ports:
    - protocol: TCP
      port: 80         # host port or service port, it can be any port number, it is not necessary to be same as container port
      targetPort: 3000 # container port, it should be same as container port defined in deployment.yaml
  type: ClusterIP    # default service type, it is used to expose the service internally within the cluster
